--- a/src/styles.css
+++ b/src/styles.css
@@ -60,8 +60,8 @@ section {
 }
 
 .hero-image {
-  height: 300px;
-  width: 300px;
+  height: 250px;
+  width: 350px;
   margin: 30px;
 }
 
@@ -137,7 +137,7 @@ form {
 
 @media only screen and (min-width: 500px) {
   footer {
-    background-color: blue;
+    background-color: #ef744b;
   }
 }
 
@@ -146,7 +146,8 @@ form {
 }
 
 footer {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
   display: flex;
   justify-content: center;
 }
