--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,7 @@ section {
   background-color: #ef866c;
   width: 80px;
   border-radius: 20px;
-  color: #ffffff;
+  color:  #ef744b;
   text-transform: uppercase;
   font-size: 12px;
   text-align: center;
